--- a/.github/workflows/fork.yaml
+++ b/.github/workflows/fork.yaml
@@ -11,23 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: clone the repo
-        run: git clone ${repository}
+    - uses: actions/checkout@master
+      with:
+        name: kubernetes-sigs/kubespray.git
+        ref: refs/heads/release
 
-      - name: Add upstream repo to list of remotes
-        run: git remote add upstream ${repository}
+    - name: Add upstream repo to list of remotes
+      run: git remote add upstream ${repository}
 
-      - name: Verify the new remote named upstream
-        run: git remote -v
+    - name: Verify the new remote named upstream
+      run: git remote -v
 
-      - name: Fetch from upstream remote
-        run: git fetch upstream
+    - name: Fetch from upstream remote
+      run: git fetch upstream
 
-      - name: View all branches, including those from upstream
-        run: git branch -va
+    - name: View all branches, including those from upstream
+      run: git branch -va
 
-      - name: Checkout your master branch and merge upstream
-        run: git checkout master && git merge upstream/master
+    - name: Checkout your master branch and merge upstream
+      run: git checkout master && git merge upstream/master
 
     env:
       CI: true
