--- a/.github/workflows/fork.yaml
+++ b/.github/workflows/fork.yaml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         name: kubernetes-sigs/kubespray.git
+        fetch-depth: '0'
         ref: 'master'
     
     - name: Add upstream repo to list of remotes
