--- a/.github/workflows/fork.yaml
+++ b/.github/workflows/fork.yaml
@@ -13,9 +13,10 @@ jobs:
     - uses: actions/checkout@v1
       with:
         repository: kubernetes-sigs/kubespray.git
+    - run: git remote add upstream ${repository} #Add upstream repo to list of remotes
     
     - name: Add upstream repo to list of remotes
-    - run: git remote add upstream ${repository} #
+    - run: git remote add upstream ${repository}
 
     - name: Verify the new remote named upstream
       run: git remote -v
