--- a/.github/workflows/fork.yaml
+++ b/.github/workflows/fork.yaml
@@ -10,7 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout Repo
+      uses: actions/checkout@v1
       with:
         repository: kubernetes-sigs/kubespray.git
     - run: git remote add upstream ${repository} #Add upstream repo to list of remotes
@@ -26,7 +27,7 @@ jobs:
 
     - name: View all branches, including those from upstream
       run: git branch -va
-
+      
     - name: Checkout your master branch and merge upstream
       run: git checkout master && git merge upstream/master
 
